// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkExtraLargeSpinner should render correctly 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="bpk-spinner bpk-spinner--extra-large bpk-spinner--dark"
    height="32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M16 9.092c-.67 0-1.22-.549-1.22-1.22V2.997c0-.67.55-1.219 1.22-1.219.671 0 1.22.549 1.22 1.22v4.876c0 .67-.549 1.219-1.22 1.219"
      opacity=".65"
    />
    <path
      clip-rule="evenodd"
      d="M19.454 10.012a1.22 1.22 0 01-.446-1.664l2.44-4.22a1.225 1.225 0 011.667-.445 1.22 1.22 0 01.447 1.664l-2.44 4.22c-.336.58-1.086.78-1.668.445"
      opacity=".75"
    />
    <path
      clip-rule="evenodd"
      d="M21.982 12.546a1.223 1.223 0 01.447-1.665l4.222-2.438a1.223 1.223 0 011.666.446c.335.58.134 1.33-.447 1.665l-4.222 2.438a1.223 1.223 0 01-1.666-.446"
      opacity=".85"
    />
    <path
      clip-rule="evenodd"
      d="M22.908 16c0-.671.548-1.22 1.219-1.22h4.876c.67 0 1.22.549 1.22 1.22 0 .67-.55 1.218-1.22 1.218h-4.876c-.67 0-1.22-.548-1.22-1.219"
      opacity=".9"
    />
    <path
      clip-rule="evenodd"
      d="M21.982 19.454a1.22 1.22 0 011.664-.447l4.22 2.44c.58.336.781 1.086.446 1.667a1.22 1.22 0 01-1.664.447l-4.22-2.44a1.225 1.225 0 01-.446-1.667"
      opacity=".2"
    />
    <path
      clip-rule="evenodd"
      d="M19.454 21.982a1.223 1.223 0 011.665.446l2.438 4.223c.335.58.135 1.33-.446 1.665-.58.335-1.33.134-1.665-.446l-2.438-4.223a1.223 1.223 0 01.446-1.665"
      opacity=".25"
    />
    <path
      clip-rule="evenodd"
      d="M16 22.907c.67 0 1.219.549 1.219 1.22v4.876c0 .67-.549 1.218-1.219 1.218s-1.22-.548-1.22-1.218v-4.877c0-.67.55-1.219 1.22-1.219"
      opacity=".3"
    />
    <path
      clip-rule="evenodd"
      d="M12.546 21.982c.58.335.781 1.083.446 1.664l-2.438 4.22c-.335.58-1.084.78-1.665.445a1.221 1.221 0 01-.446-1.664l2.438-4.22a1.223 1.223 0 011.665-.445"
      opacity=".35"
    />
    <path
      clip-rule="evenodd"
      d="M10.018 19.453c.335.581.134 1.33-.447 1.666L5.35 23.556a1.224 1.224 0 01-1.666-.447 1.223 1.223 0 01.447-1.665l4.222-2.438a1.223 1.223 0 011.666.446"
      opacity=".4"
    />
    <path
      clip-rule="evenodd"
      d="M9.092 16c0 .67-.549 1.218-1.219 1.218H2.997c-.67 0-1.22-.548-1.22-1.219 0-.67.55-1.219 1.22-1.219h4.876c.67 0 1.22.549 1.22 1.22"
      opacity=".45"
    />
    <path
      clip-rule="evenodd"
      d="M10.013 12.55a1.22 1.22 0 01-1.664.446l-4.22-2.44a1.225 1.225 0 01-.446-1.667 1.22 1.22 0 011.664-.446l4.22 2.44c.58.336.781 1.086.446 1.667"
      opacity=".5"
    />
    <path
      clip-rule="evenodd"
      d="M12.546 10.017c-.58.335-1.33.135-1.665-.446L8.443 5.348a1.223 1.223 0 01.446-1.665 1.223 1.223 0 011.665.446l2.438 4.223c.335.58.135 1.33-.446 1.665"
      opacity=".55"
    />
  </svg>
</DocumentFragment>
`;

exports[`BpkExtraLargeSpinner should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="bpk-spinner bpk-spinner--extra-large bpk-spinner--dark my-custom-class"
    height="32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M16 9.092c-.67 0-1.22-.549-1.22-1.22V2.997c0-.67.55-1.219 1.22-1.219.671 0 1.22.549 1.22 1.22v4.876c0 .67-.549 1.219-1.22 1.219"
      opacity=".65"
    />
    <path
      clip-rule="evenodd"
      d="M19.454 10.012a1.22 1.22 0 01-.446-1.664l2.44-4.22a1.225 1.225 0 011.667-.445 1.22 1.22 0 01.447 1.664l-2.44 4.22c-.336.58-1.086.78-1.668.445"
      opacity=".75"
    />
    <path
      clip-rule="evenodd"
      d="M21.982 12.546a1.223 1.223 0 01.447-1.665l4.222-2.438a1.223 1.223 0 011.666.446c.335.58.134 1.33-.447 1.665l-4.222 2.438a1.223 1.223 0 01-1.666-.446"
      opacity=".85"
    />
    <path
      clip-rule="evenodd"
      d="M22.908 16c0-.671.548-1.22 1.219-1.22h4.876c.67 0 1.22.549 1.22 1.22 0 .67-.55 1.218-1.22 1.218h-4.876c-.67 0-1.22-.548-1.22-1.219"
      opacity=".9"
    />
    <path
      clip-rule="evenodd"
      d="M21.982 19.454a1.22 1.22 0 011.664-.447l4.22 2.44c.58.336.781 1.086.446 1.667a1.22 1.22 0 01-1.664.447l-4.22-2.44a1.225 1.225 0 01-.446-1.667"
      opacity=".2"
    />
    <path
      clip-rule="evenodd"
      d="M19.454 21.982a1.223 1.223 0 011.665.446l2.438 4.223c.335.58.135 1.33-.446 1.665-.58.335-1.33.134-1.665-.446l-2.438-4.223a1.223 1.223 0 01.446-1.665"
      opacity=".25"
    />
    <path
      clip-rule="evenodd"
      d="M16 22.907c.67 0 1.219.549 1.219 1.22v4.876c0 .67-.549 1.218-1.219 1.218s-1.22-.548-1.22-1.218v-4.877c0-.67.55-1.219 1.22-1.219"
      opacity=".3"
    />
    <path
      clip-rule="evenodd"
      d="M12.546 21.982c.58.335.781 1.083.446 1.664l-2.438 4.22c-.335.58-1.084.78-1.665.445a1.221 1.221 0 01-.446-1.664l2.438-4.22a1.223 1.223 0 011.665-.445"
      opacity=".35"
    />
    <path
      clip-rule="evenodd"
      d="M10.018 19.453c.335.581.134 1.33-.447 1.666L5.35 23.556a1.224 1.224 0 01-1.666-.447 1.223 1.223 0 01.447-1.665l4.222-2.438a1.223 1.223 0 011.666.446"
      opacity=".4"
    />
    <path
      clip-rule="evenodd"
      d="M9.092 16c0 .67-.549 1.218-1.219 1.218H2.997c-.67 0-1.22-.548-1.22-1.219 0-.67.55-1.219 1.22-1.219h4.876c.67 0 1.22.549 1.22 1.22"
      opacity=".45"
    />
    <path
      clip-rule="evenodd"
      d="M10.013 12.55a1.22 1.22 0 01-1.664.446l-4.22-2.44a1.225 1.225 0 01-.446-1.667 1.22 1.22 0 011.664-.446l4.22 2.44c.58.336.781 1.086.446 1.667"
      opacity=".5"
    />
    <path
      clip-rule="evenodd"
      d="M12.546 10.017c-.58.335-1.33.135-1.665-.446L8.443 5.348a1.223 1.223 0 01.446-1.665 1.223 1.223 0 011.665.446l2.438 4.223c.335.58.135 1.33-.446 1.665"
      opacity=".55"
    />
  </svg>
</DocumentFragment>
`;

exports[`BpkExtraLargeSpinner should render correctly with type as light 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="bpk-spinner bpk-spinner--extra-large bpk-spinner--light"
    height="32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M16 9.092c-.67 0-1.22-.549-1.22-1.22V2.997c0-.67.55-1.219 1.22-1.219.671 0 1.22.549 1.22 1.22v4.876c0 .67-.549 1.219-1.22 1.219"
      opacity=".65"
    />
    <path
      clip-rule="evenodd"
      d="M19.454 10.012a1.22 1.22 0 01-.446-1.664l2.44-4.22a1.225 1.225 0 011.667-.445 1.22 1.22 0 01.447 1.664l-2.44 4.22c-.336.58-1.086.78-1.668.445"
      opacity=".75"
    />
    <path
      clip-rule="evenodd"
      d="M21.982 12.546a1.223 1.223 0 01.447-1.665l4.222-2.438a1.223 1.223 0 011.666.446c.335.58.134 1.33-.447 1.665l-4.222 2.438a1.223 1.223 0 01-1.666-.446"
      opacity=".85"
    />
    <path
      clip-rule="evenodd"
      d="M22.908 16c0-.671.548-1.22 1.219-1.22h4.876c.67 0 1.22.549 1.22 1.22 0 .67-.55 1.218-1.22 1.218h-4.876c-.67 0-1.22-.548-1.22-1.219"
      opacity=".9"
    />
    <path
      clip-rule="evenodd"
      d="M21.982 19.454a1.22 1.22 0 011.664-.447l4.22 2.44c.58.336.781 1.086.446 1.667a1.22 1.22 0 01-1.664.447l-4.22-2.44a1.225 1.225 0 01-.446-1.667"
      opacity=".2"
    />
    <path
      clip-rule="evenodd"
      d="M19.454 21.982a1.223 1.223 0 011.665.446l2.438 4.223c.335.58.135 1.33-.446 1.665-.58.335-1.33.134-1.665-.446l-2.438-4.223a1.223 1.223 0 01.446-1.665"
      opacity=".25"
    />
    <path
      clip-rule="evenodd"
      d="M16 22.907c.67 0 1.219.549 1.219 1.22v4.876c0 .67-.549 1.218-1.219 1.218s-1.22-.548-1.22-1.218v-4.877c0-.67.55-1.219 1.22-1.219"
      opacity=".3"
    />
    <path
      clip-rule="evenodd"
      d="M12.546 21.982c.58.335.781 1.083.446 1.664l-2.438 4.22c-.335.58-1.084.78-1.665.445a1.221 1.221 0 01-.446-1.664l2.438-4.22a1.223 1.223 0 011.665-.445"
      opacity=".35"
    />
    <path
      clip-rule="evenodd"
      d="M10.018 19.453c.335.581.134 1.33-.447 1.666L5.35 23.556a1.224 1.224 0 01-1.666-.447 1.223 1.223 0 01.447-1.665l4.222-2.438a1.223 1.223 0 011.666.446"
      opacity=".4"
    />
    <path
      clip-rule="evenodd"
      d="M9.092 16c0 .67-.549 1.218-1.219 1.218H2.997c-.67 0-1.22-.548-1.22-1.219 0-.67.55-1.219 1.22-1.219h4.876c.67 0 1.22.549 1.22 1.22"
      opacity=".45"
    />
    <path
      clip-rule="evenodd"
      d="M10.013 12.55a1.22 1.22 0 01-1.664.446l-4.22-2.44a1.225 1.225 0 01-.446-1.667 1.22 1.22 0 011.664-.446l4.22 2.44c.58.336.781 1.086.446 1.667"
      opacity=".5"
    />
    <path
      clip-rule="evenodd"
      d="M12.546 10.017c-.58.335-1.33.135-1.665-.446L8.443 5.348a1.223 1.223 0 01.446-1.665 1.223 1.223 0 011.665.446l2.438 4.223c.335.58.135 1.33-.446 1.665"
      opacity=".55"
    />
  </svg>
</DocumentFragment>
`;

exports[`BpkExtraLargeSpinner should render correctly with type as primary 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="bpk-spinner bpk-spinner--extra-large bpk-spinner--primary"
    height="32"
    width="32"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M16 9.092c-.67 0-1.22-.549-1.22-1.22V2.997c0-.67.55-1.219 1.22-1.219.671 0 1.22.549 1.22 1.22v4.876c0 .67-.549 1.219-1.22 1.219"
      opacity=".65"
    />
    <path
      clip-rule="evenodd"
      d="M19.454 10.012a1.22 1.22 0 01-.446-1.664l2.44-4.22a1.225 1.225 0 011.667-.445 1.22 1.22 0 01.447 1.664l-2.44 4.22c-.336.58-1.086.78-1.668.445"
      opacity=".75"
    />
    <path
      clip-rule="evenodd"
      d="M21.982 12.546a1.223 1.223 0 01.447-1.665l4.222-2.438a1.223 1.223 0 011.666.446c.335.58.134 1.33-.447 1.665l-4.222 2.438a1.223 1.223 0 01-1.666-.446"
      opacity=".85"
    />
    <path
      clip-rule="evenodd"
      d="M22.908 16c0-.671.548-1.22 1.219-1.22h4.876c.67 0 1.22.549 1.22 1.22 0 .67-.55 1.218-1.22 1.218h-4.876c-.67 0-1.22-.548-1.22-1.219"
      opacity=".9"
    />
    <path
      clip-rule="evenodd"
      d="M21.982 19.454a1.22 1.22 0 011.664-.447l4.22 2.44c.58.336.781 1.086.446 1.667a1.22 1.22 0 01-1.664.447l-4.22-2.44a1.225 1.225 0 01-.446-1.667"
      opacity=".2"
    />
    <path
      clip-rule="evenodd"
      d="M19.454 21.982a1.223 1.223 0 011.665.446l2.438 4.223c.335.58.135 1.33-.446 1.665-.58.335-1.33.134-1.665-.446l-2.438-4.223a1.223 1.223 0 01.446-1.665"
      opacity=".25"
    />
    <path
      clip-rule="evenodd"
      d="M16 22.907c.67 0 1.219.549 1.219 1.22v4.876c0 .67-.549 1.218-1.219 1.218s-1.22-.548-1.22-1.218v-4.877c0-.67.55-1.219 1.22-1.219"
      opacity=".3"
    />
    <path
      clip-rule="evenodd"
      d="M12.546 21.982c.58.335.781 1.083.446 1.664l-2.438 4.22c-.335.58-1.084.78-1.665.445a1.221 1.221 0 01-.446-1.664l2.438-4.22a1.223 1.223 0 011.665-.445"
      opacity=".35"
    />
    <path
      clip-rule="evenodd"
      d="M10.018 19.453c.335.581.134 1.33-.447 1.666L5.35 23.556a1.224 1.224 0 01-1.666-.447 1.223 1.223 0 01.447-1.665l4.222-2.438a1.223 1.223 0 011.666.446"
      opacity=".4"
    />
    <path
      clip-rule="evenodd"
      d="M9.092 16c0 .67-.549 1.218-1.219 1.218H2.997c-.67 0-1.22-.548-1.22-1.219 0-.67.55-1.219 1.22-1.219h4.876c.67 0 1.22.549 1.22 1.22"
      opacity=".45"
    />
    <path
      clip-rule="evenodd"
      d="M10.013 12.55a1.22 1.22 0 01-1.664.446l-4.22-2.44a1.225 1.225 0 01-.446-1.667 1.22 1.22 0 011.664-.446l4.22 2.44c.58.336.781 1.086.446 1.667"
      opacity=".5"
    />
    <path
      clip-rule="evenodd"
      d="M12.546 10.017c-.58.335-1.33.135-1.665-.446L8.443 5.348a1.223 1.223 0 01.446-1.665 1.223 1.223 0 011.665.446l2.438 4.223c.335.58.135 1.33-.446 1.665"
      opacity=".55"
    />
  </svg>
</DocumentFragment>
`;
